# document_segmentation

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-test.yaml  ruff.yaml
document_segmentation/: settings.py
document_segmentation/data/: 1.04.02_inventory2uuid.json  Analysis Renate 1547.csv  Analysis Renate 1547.xlsx  Analysis Renate 1557.xlsx  Analysis Renate 3142.xlsx  Analysis Renate 3891.csv  Analysis Renate 3891.xlsx  Analysis Renate 8276.csv  Analysis Renate 8276.xlsx
document_segmentation/data/annotations/: Analysis Renate 1120.csv  Analysis Renate 1267.csv  Analysis Renate 1274.csv  Analysis Renate 1539.csv  Analysis Renate 1557.csv  Analysis Renate 2448.csv  Analysis Renate 2555.csv  Analysis Renate 2775.csv  Analysis Renate 3142.csv  Analysis Renate 7923.csv  Analysis Renate 8023.csv  Analysis Renate 8121.csv  Analysis Renate 8237.csv  Analysis Renate 8284.csv  Analysis Renate 8697.csv  Analysis Renate 8834.csv  Work in progress document types TANAP categories, Renate Smit.csv
document_segmentation/evaluation/: dataset.py
document_segmentation/model/: dataset.py  device_module.py  document_classifier.py  page_classifier.py  page_embedding.py  page_learner.py  page_sequence_tagger.py  page_tagger.py  region_classifier.py  region_embedding.py  util.py
document_segmentation/pagexml/: __init__.py  dataset.py  generale_missiven.py  inventory.py  pagexml.py
document_segmentation/pagexml/annotations/: generale_missiven.py  renate_analysis.py  sheet.py
document_segmentation/pagexml/datamodel/: __init__.py  document.py  inventory.py  label.py  page.py  region.py
notebooks/: page_classifier.ipynb  page_sequence_tagger.ipynb  page_sequence_tagger_generale_missiven.ipynb  page_sequence_tagger_renate.ipynb  region_classifier.ipynb  train_model.ipynb
scripts/: classify_documents.py  download_inventories.py  evaluate.py  extract_docs.py  inference.py  predict_inventories.py  test_inventories.md  train_classifier.py  train_model.py  train_segmentation_model.py
tests/: conftest.py
tests/model/: test_device_module.py  test_page_learner.py  test_region_embedding.py  test_util.py
tests/pagexml/: test_dataset.py  test_inventory.py  test_pagexml.py
tests/pagexml/annotations/: test_renate_analysis.py  test_sheet.py
tests/pagexml/datamodel/: test_document.py  test_inventory.py  test_label.py  test_page.py  test_region.py
