[tool.poetry]
name = "document-segmentation"
version = "0.1.0"
description = ""
authors = ["Carsten Schnober <c.schnober@esciencecenter.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"
pagexml-tools = "^0.5.0"
openpyxl = "^3.1.5"
torch = "^2.2.0"
torchvision = "^0.17.0"
torchaudio = "^2.2.0"
transformers = "^4.42.4"
scikit-learn = "^1.5.0"
torcheval = "^0.0.7"
pydantic = "^2.7.4"
sentence-transformers = "^3.0.1"
wandb = "^0.17.2"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.2"
pre-commit = "^3.7.1"
pytest-cov = "^5.0.0"
requests-mock = "^1.11.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
"extend-select" = ["I"]

[tool.ruff.lint.isort]
known-third-party = ["wandb"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest.ini_options]
addopts = "--durations=0"
testpaths = ["tests"]
